samples/_failures_safe/1761635761_7781cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_90db3bcd.c: In function ‘main’:
./samples/SAFE/__tmp_90db3bcd.c:137:10: error: ‘read’ undeclared (first use in this function); did you mean ‘fread’?
  137 |     if (!read
      |          ^~~~
      |          fread
./samples/SAFE/__tmp_90db3bcd.c:137:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_90db3bcd.c:137:14: error: expected ‘)’ at end of input
  137 |     if (!read
      |        ~     ^
      |              )
./samples/SAFE/__tmp_90db3bcd.c:137:5: error: expected declaration or statement at end of input
  137 |     if (!read
      |     ^~
